# packagehelper

./: .gitignore  pyproject.toml
test/: test_assets.py
test/assets/: test1.txt
test/assets/test2/: test2.txt
